Add GUI view and update Main.scala