@@ -10,9 +10,9 @@ lazy val root = project
 
 libraryDependencies += "org.scalactic" %% "scalactic" % "3.2.17"
 libraryDependencies += "org.scalatest" %% "scalatest" % "3.2.17" % "test"
-libraryDependencies += "org.scala-lang.modules" %% "scala-swing" % "3.0.0"
 
-libraryDependencies += "org.scalafx" %% "scalafx" % "16.0.0-R24"
+libraryDependencies += "org.scalafx" %% "scalafx" % "21.0.0-R32"
+
 libraryDependencies ++= {
   // Determine OS version of JavaFX binaries
   lazy val osName = System.getProperty("os.name") match {
@@ -24,3 +24,13 @@ libraryDependencies ++= {
   Seq("base", "controls", "fxml", "graphics", "media", "swing", "web")
     .map(m => "org.openjfx" % s"javafx-$m" % "16" classifier osName)
 }
+
+fork := true
+connectInput := true
+
+javaOptions in run ++= Seq(
+  "--module-path",
+  "javafx-sdk-21.0.1/lib",
+  "--add-modules",
+  "javafx.controls,javafx.fxml,javafx.web"
+)
